--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     const conf = hargaPaket[paket];
 
     try {
-      const res = await fetch(`https://api.resellergaming.my.id/pterodactyl/addpanel?domain=https://domainpanel.com&plta=plta_mu&username=${username}&disk=${conf.disk}&cpu=${conf.cpu}`);
+      const res = await fetch(`https://api.resellergaming.my.id/pterodactyl/addpanel?domain=https://valfar.panelwota.my.id&plta=ptla_0RXWZSDYTPJPcyGyEA3YI2INHVEuMiQ1EeGP1xWuZmA&username=${username}&disk=${conf.disk}&cpu=${conf.cpu}`);
       const data = await res.json();
 
       if (data && data.user) {
